<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reportList.DetailsReportActivity"
    android:orientation="vertical"
    >

    <include
        layout="@layout/app_bar_main"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userWhoReportsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/usernameReporter"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/usernameExample"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/UserReported"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reportedUsernameLabel"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reportedUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/usernameExample2"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_marginStart="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:id="@+id/ReasonLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reasonLabel"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/brieflyReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/reasonExample"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeMaxTextSize="100sp"
                    android:textSize="20sp"
                    android:autoSizeTextType="uniform"
                    android:textColor="#000000"/>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="246dp">


        <Button
            android:id="@+id/acceptButton2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#18E320"
            android:orientation="vertical"
            android:text="@string/solveReport" />

        <Button
            android:id="@+id/denyButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:backgroundTint="#EC0909"
            android:text="@string/deleteUser" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>